# zk-wormhole-monorepo

./: .gitmodules  README.md
app/: globals.css
app/app/: page.tsx
components/: how-it-works-modal.tsx  spotlight-cursor.tsx
frontend/: package-lock.json  package.json
frontend/app/: config.ts  layout.tsx  page.tsx
frontend/app/api/download/: route.ts
frontend/app/api/faucet/: route.ts
frontend/app/app/: page.tsx
frontend/components/: how-it-works-modal.tsx
frontend/components/wallet/: account.tsx  connect-wallet.tsx  wallet-options.tsx
frontend/lib/: abi.ts  constant.ts  wagmi.ts
hooks/: use-spotlight.ts
program/: Cargo.toml
program/zksp1-wormhole/client/: Cargo.toml
program/zksp1-wormhole/client/src/: main.rs
program/zksp1-wormhole/contracts/: Flattened.sol  README.md  makefile  remappings.txt
program/zksp1-wormhole/contracts/script/: DeployERC20.s.sol  DeployWormholeWrapper.s.sol  SendZkWUSDToDead.s.sol
program/zksp1-wormhole/contracts/src/: WormHoleWrapper.sol  WormholeERC20.sol  ZkWormholeCall.sol  ZkWormholeERC20.sol
program/zksp1-wormhole/contracts/src/fixtures/: plonk-fixture.json
program/zksp1-wormhole/contracts/test/: TestBytes.t.sol  WormholeStandard.t.sol  WormholeWrapper.t.sol  ZkWormhole.t.sol  ZkWormholeCall.t.sol
program/zksp1-wormhole/host/: Cargo.toml  build.rs  proof.json
program/zksp1-wormhole/host/src/: main.rs
zk-sp1-circuit/program/: Cargo.toml
zk-sp1-circuit/program/src/: main.rs  template_main.rs
zk-sp1-circuit/script/: Cargo.toml
zksp1-wormhole/host/: Cargo.toml
zksp1-wormhole/host/src/: main.rs
(+9 files in other folders)
